fix Gusto->Thetis typo

--- a/_modules/thetis/options.html
+++ b/_modules/thetis/options.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.options &mdash; Thetis 1.0 documentation</title>
+    <title>thetis.options &#8212; Thetis 1.0 documentation</title>
     
     <link rel="stylesheet" href="../../_static/fenics.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -229,13 +229,6 @@
             <span class="s1">&#39;pc_fieldsplit_type&#39;</span><span class="p">:</span> <span class="s1">&#39;multiplicative&#39;</span><span class="p">,</span>
         <span class="p">}</span>
         <span class="sd">&quot;&quot;&quot;PETSc solver parameters for 2D shallow water equations&quot;&quot;&quot;</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">solver_parameters_sw_momentum</span> <span class="o">=</span> <span class="p">{</span>
-            <span class="s1">&#39;ksp_type&#39;</span><span class="p">:</span> <span class="s1">&#39;gmres&#39;</span><span class="p">,</span>
-            <span class="s1">&#39;pc_type&#39;</span><span class="p">:</span> <span class="s1">&#39;bjacobi&#39;</span><span class="p">,</span>
-            <span class="s1">&#39;sub_ksp_type&#39;</span><span class="p">:</span> <span class="s1">&#39;preonly&#39;</span><span class="p">,</span>
-            <span class="s1">&#39;sub_pc_type&#39;</span><span class="p">:</span> <span class="s1">&#39;sor&#39;</span><span class="p">,</span>
-        <span class="p">}</span>
-        <span class="sd">&quot;&quot;&quot;PETSc solver parameters for 2D depth averaged momentum equation&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">solver_parameters_momentum_explicit</span> <span class="o">=</span> <span class="p">{</span>
             <span class="s1">&#39;snes_type&#39;</span><span class="p">:</span> <span class="s1">&#39;ksponly&#39;</span><span class="p">,</span>
             <span class="s1">&#39;ksp_type&#39;</span><span class="p">:</span> <span class="s1">&#39;cg&#39;</span><span class="p">,</span>
@@ -281,8 +274,8 @@
       <div class="clearer"></div>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2016, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.5.
+        &#169; Copyright 2016, Tuomas Karna et al..
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.6.
     </div>
   </body>
 </html>
