use thetis logo as page icon

--- a/py-modindex.html
+++ b/py-modindex.html
@@ -33,7 +33,7 @@
 <link rel="stylesheet" href="_static/featured.css">
 
 
-<link rel="shortcut icon" href="_static/icon.ico" />
+<link rel="shortcut icon" href="_static/icon_thetis.ico" />
 
 
 
