--- a/_modules/index.html
+++ b/_modules/index.html
@@ -32,7 +32,7 @@
 <link rel="stylesheet" href="../_static/featured.css">
 
 
-<link rel="shortcut icon" href="../_static/icon.ico" />
+<link rel="shortcut icon" href="../_static/icon_thetis.ico" />
 
 
   </head>
