New install instructions
Provide for installation using the new firedrake-update --install funcitonality.

--- a/_modules/thetis/options.html
+++ b/_modules/thetis/options.html
@@ -229,6 +229,13 @@
             <span class="s1">&#39;pc_fieldsplit_type&#39;</span><span class="p">:</span> <span class="s1">&#39;multiplicative&#39;</span><span class="p">,</span>
         <span class="p">}</span>
         <span class="sd">&quot;&quot;&quot;PETSc solver parameters for 2D shallow water equations&quot;&quot;&quot;</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">solver_parameters_sw_momentum</span> <span class="o">=</span> <span class="p">{</span>
+            <span class="s1">&#39;ksp_type&#39;</span><span class="p">:</span> <span class="s1">&#39;gmres&#39;</span><span class="p">,</span>
+            <span class="s1">&#39;pc_type&#39;</span><span class="p">:</span> <span class="s1">&#39;bjacobi&#39;</span><span class="p">,</span>
+            <span class="s1">&#39;sub_ksp_type&#39;</span><span class="p">:</span> <span class="s1">&#39;preonly&#39;</span><span class="p">,</span>
+            <span class="s1">&#39;sub_pc_type&#39;</span><span class="p">:</span> <span class="s1">&#39;sor&#39;</span><span class="p">,</span>
+        <span class="p">}</span>
+        <span class="sd">&quot;&quot;&quot;PETSc solver parameters for 2D depth averaged momentum equation&quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">solver_parameters_momentum_explicit</span> <span class="o">=</span> <span class="p">{</span>
             <span class="s1">&#39;snes_type&#39;</span><span class="p">:</span> <span class="s1">&#39;ksponly&#39;</span><span class="p">,</span>
             <span class="s1">&#39;ksp_type&#39;</span><span class="p">:</span> <span class="s1">&#39;cg&#39;</span><span class="p">,</span>
