added youtube animations to front page

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -24,6 +24,8 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <link rel="index" title="Index" href="../genindex.html" />
+    <link rel="search" title="Search" href="../search.html" />
     <link rel="top" title="Thetis 1.0 documentation" href="../index.html" />
 <!--[if lte IE 6]>
 <link rel="stylesheet" href="../_static/ie6.css" type="text/css" media="screen" charset="utf-8" />
@@ -65,14 +67,15 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="abc.html">abc</a></li>
-<li><a href="firedrake/constant.html">firedrake.constant</a></li>
 <li><a href="thetis/callback.html">thetis.callback</a></li>
 <li><a href="thetis/coupled_timeintegrator.html">thetis.coupled_timeintegrator</a></li>
 <li><a href="thetis/equation.html">thetis.equation</a></li>
 <li><a href="thetis/exporter.html">thetis.exporter</a></li>
+<li><a href="thetis/implicitexplicit.html">thetis.implicitexplicit</a></li>
 <li><a href="thetis/limiter.html">thetis.limiter</a></li>
 <li><a href="thetis/momentum_eq.html">thetis.momentum_eq</a></li>
 <li><a href="thetis/options.html">thetis.options</a></li>
+<li><a href="thetis/rungekutta.html">thetis.rungekutta</a></li>
 <li><a href="thetis/shallowwater_eq.html">thetis.shallowwater_eq</a></li>
 <li><a href="thetis/solver.html">thetis.solver</a></li>
 <li><a href="thetis/solver2d.html">thetis.solver2d</a></li>
@@ -91,7 +94,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.6.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.9.
     </div>
   </body>
 </html>
