--- a/_modules/thetis/equation.html
+++ b/_modules/thetis/equation.html
@@ -24,6 +24,8 @@
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <link rel="index" title="Index" href="../../genindex.html" />
+    <link rel="search" title="Search" href="../../search.html" />
     <link rel="top" title="Thetis 1.0 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" />
 <!--[if lte IE 6]>
@@ -76,6 +78,9 @@
 <div class="viewcode-block" id="Term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Term">[docs]</a><span class="k">class</span> <span class="nc">Term</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Implements a single term of an equation.</span>
+
+<span class="sd">    .. note::</span>
+<span class="sd">        Sign convention: all terms are assumed to be on the left hand side of the equation A + term = 0.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">):</span>
         <span class="c1"># define bunch of members needed to construct forms</span>
@@ -92,8 +97,6 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the term.</span>
 
-<span class="sd">        Sign convention: all terms are assumed to be on the left hand side of the equation A + term = 0.</span>
-
 <span class="sd">        :arg solution: solution :class:`.Function` of the corresponding equation</span>
 <span class="sd">        :arg solution_old: a time lagged solution :class:`.Function`</span>
 <span class="sd">        :arg fields: a dictionary that provides all the remaining fields that the term depends on.</span>
@@ -107,8 +110,6 @@
 <div class="viewcode-block" id="Term.jacobian"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Term.jacobian">[docs]</a>    <span class="k">def</span> <span class="nf">jacobian</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the Jacobian of the term.</span>
-
-<span class="sd">        Sign convention: all terms are assumed to be on the left hand side of the equation A + term = 0.</span>
 
 <span class="sd">        :arg solution: solution :class:`.Function` of the corresponding equation</span>
 <span class="sd">        :arg solution_old: a time lagged solution :class:`.Function`</span>
@@ -238,7 +239,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2016, Tuomas Karna et al..
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.6.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.9.
     </div>
   </body>
 </html>
