--- a/source/_themes/firedrake/layout.html
+++ b/source/_themes/firedrake/layout.html
@@ -21,18 +21,18 @@
 {# override upper relbar to show our navigation menu #}
 {% block relbar1 %}
 <div class="wrapper">
-  <a href="{{ pathto('index.html', 1) }}"><img src="{{ pathto('_static/%s.%s' % ('banner', 'png'), 1) }}" height="200px" alt="Thetis Project Banner" /></a>
+  <a href="{{ pathto('index.html', 1) }}"><img src="{{ pathto('_static/%s.%s' % ('banner', 'png'), 1) }}" height="180px" alt="Thetis Project Banner" /></a>
   <div id="access">
     <div class="menu">
       <ul>
-        <li class="page_item"><a href="{{ pathto('documentation.html', 1) }}" title="Documentation for Firedrake">Documentation</a></li>
-        <li class="page_item"><a href="{{ pathto('download.html', 1) }}" title="Obtain the firedrake code">Download</a></li>
-        <li class="page_item"><a href="{{ pathto('%s.%s' % ('team', 'html'), 1) }}" title="The guilty parties">Team</a></li>
+        <li class="page_item"><a href="{{ pathto('documentation.html', 1) }}" title="Thetis documentation">Documentation</a></li>
+        <li class="page_item"><a href="{{ pathto('download.html', 1) }}" title="Install Thetis">Download</a></li>
+        <li class="page_item"><a href="{{ pathto('%s.%s' % ('team', 'html'), 1) }}" title="Development team">Team</a></li>
         <li class="page_item"><a href="{{ pathto('publications.html', 1) }}" title="Publications">Publications</a></li>
         <li class="page_item"><a href="{{ pathto('funding.html', 1) }}" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="{{ pathto('contact.html', 1) }}" title="Getting in touch">Contact</a></li>
-        <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://travis-ci.org/thetisproject/thetis" title="Travis">Travis</a></li>
+        <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
+        <li class="page_item"><a href="https://travis-ci.org/thetisproject/thetis" title="Thetis on Travis">Travis</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
