--- a/thetis.html
+++ b/thetis.html
@@ -40,18 +40,18 @@
   </head>
   <body role="document">
 <div class="wrapper">
-  <a href="index.html"><img src="_static/banner.png" height="200px" alt="Thetis Project Banner" /></a>
+  <a href="index.html"><img src="_static/banner.png" height="180px" alt="Thetis Project Banner" /></a>
   <div id="access">
     <div class="menu">
       <ul>
-        <li class="page_item"><a href="documentation.html" title="Documentation for Firedrake">Documentation</a></li>
-        <li class="page_item"><a href="download.html" title="Obtain the firedrake code">Download</a></li>
-        <li class="page_item"><a href="team.html" title="The guilty parties">Team</a></li>
+        <li class="page_item"><a href="documentation.html" title="Thetis documentation">Documentation</a></li>
+        <li class="page_item"><a href="download.html" title="Install Thetis">Download</a></li>
+        <li class="page_item"><a href="team.html" title="Development team">Team</a></li>
         <li class="page_item"><a href="publications.html" title="Publications">Publications</a></li>
         <li class="page_item"><a href="funding.html" title="Our financial supporters">Funding</a></li>
         <li class="page_item"><a href="contact.html" title="Getting in touch">Contact</a></li>
-        <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="GitHub">GitHub</a></li>
-        <li class="page_item"><a href="https://travis-ci.org/thetisproject/thetis" title="Travis">Travis</a></li>
+        <li class="page_item"><a href="https://github.com/thetisproject/thetis" title="Thetis source on GitHub">GitHub</a></li>
+        <li class="page_item"><a href="https://travis-ci.org/thetisproject/thetis" title="Thetis on Travis">Travis</a></li>
       </ul>
     </div><!-- .menu -->
   </div><!-- #access -->
