--- a/download.html
+++ b/download.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Obtaining Thetis &#8212; Thetis 0.0.5+663.gebbf1d6 documentation</title>
+    <title>Obtaining Thetis &#8212; Thetis 0+untagged.771.gd639bf8 documentation</title>
     
     <link rel="stylesheet" href="_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '0.0.5+663.gebbf1d6',
+        VERSION:     '0+untagged.771.gd639bf8',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -79,7 +79,7 @@ activating the Firedrake virtualenv and running:</p>
 </div>
 <p>The Thetis source will be installed in the <code class="docutils literal"><span class="pre">src/thetis</span></code> subdirectory
 of your Firedrake install. Using this install method you should
-<strong>not</strong> add add Thetis to your <code class="docutils literal"><span class="pre">PYTHONPATH</span></code>. Instead, Thetis will
+<strong>not</strong> add Thetis to your <code class="docutils literal"><span class="pre">PYTHONPATH</span></code>. Instead, Thetis will
 automatically be available to import whenever your Firedrake
 virtualenv is active.</p>
 </div>
