update webpage to reflect updated thetis API documentation

--- a/_modules/thetis/equation.html
+++ b/_modules/thetis/equation.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.equation &#8212; Thetis 0+untagged.771.gd639bf8 documentation</title>
+    <title>thetis.equation &#8212; Thetis 0+untagged.820.g6820076 documentation</title>
     
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0+untagged.771.gd639bf8',
+        VERSION:     '0+untagged.820.g6820076',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -77,8 +77,14 @@
 <div class="viewcode-block" id="Term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Term">[docs]</a><span class="k">class</span> <span class="nc">Term</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Implements a single term of an equation.</span>
+
+<span class="sd">    .. note::</span>
+<span class="sd">        Sign convention: all terms are assumed to be on the left hand side of the equation A + term = 0.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        :arg function_space: the :class:`FunctionSpace` the solution belongs to</span>
+<span class="sd">        &quot;&quot;&quot;</span>
         <span class="c1"># define bunch of members needed to construct forms</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">function_space</span> <span class="o">=</span> <span class="n">function_space</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">mesh</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">function_space</span><span class="o">.</span><span class="n">mesh</span><span class="p">()</span>
@@ -93,8 +99,6 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the term.</span>
 
-<span class="sd">        Sign convention: all terms are assumed to be on the left hand side of the equation A + term = 0.</span>
-
 <span class="sd">        :arg solution: solution :class:`.Function` of the corresponding equation</span>
 <span class="sd">        :arg solution_old: a time lagged solution :class:`.Function`</span>
 <span class="sd">        :arg fields: a dictionary that provides all the remaining fields that the term depends on.</span>
@@ -108,8 +112,6 @@
 <div class="viewcode-block" id="Term.jacobian"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Term.jacobian">[docs]</a>    <span class="k">def</span> <span class="nf">jacobian</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">,</span> <span class="n">solution_old</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">fields_old</span><span class="p">,</span> <span class="n">bnd_conditions</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Returns an UFL form of the Jacobian of the term.</span>
-
-<span class="sd">        Sign convention: all terms are assumed to be on the left hand side of the equation A + term = 0.</span>
 
 <span class="sd">        :arg solution: solution :class:`.Function` of the corresponding equation</span>
 <span class="sd">        :arg solution_old: a time lagged solution :class:`.Function`</span>
@@ -128,8 +130,27 @@
 <span class="sd">    Implements an equation, made out of terms.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">SUPPORTED_LABELS</span> <span class="o">=</span> <span class="p">[</span><span class="s1">&#39;source&#39;</span><span class="p">,</span> <span class="s1">&#39;explicit&#39;</span><span class="p">,</span> <span class="s1">&#39;implicit&#39;</span><span class="p">,</span> <span class="s1">&#39;nonlinear&#39;</span><span class="p">]</span>
+    <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    Valid labels for terms, indicating how they should be treated in the time</span>
+<span class="sd">    integrator.</span>
+
+<span class="sd">    source</span>
+<span class="sd">        The term is a source term, i.e. does not depend on the solution.</span>
+
+<span class="sd">    explicit</span>
+<span class="sd">        The term should be treated explicitly</span>
+
+<span class="sd">    implicit</span>
+<span class="sd">        The term should be treated implicitly</span>
+
+<span class="sd">    nonlinear</span>
+<span class="sd">        The term is nonlinear and should be treated fully implicitly</span>
+<span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">function_space</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        :arg function_space: the :class:`FunctionSpace` the solution belongs to</span>
+<span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">terms</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">labels</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">function_space</span> <span class="o">=</span> <span class="n">function_space</span>
@@ -143,13 +164,20 @@
 
 <div class="viewcode-block" id="Equation.mass_term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.mass_term">[docs]</a>    <span class="k">def</span> <span class="nf">mass_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">solution</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">        Default mass matrix term for the used solution function space.</span>
+<span class="sd">        Returns default mass matrix term for the solution function space.</span>
 
-<span class="sd">        Can be overloaded in derived classes if needed.</span>
+<span class="sd">        :returns: UFL form of the mass term</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="n">inner</span><span class="p">(</span><span class="n">solution</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">test</span><span class="p">)</span> <span class="o">*</span> <span class="n">dx</span></div>
 
 <div class="viewcode-block" id="Equation.add_term"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.add_term">[docs]</a>    <span class="k">def</span> <span class="nf">add_term</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">term</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
+        <span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Adds a term in the equation</span>
+
+<span class="sd">        :arg term: :class:`.Term` object to add_term</span>
+<span class="sd">        :arg string label: Assign a label to the term. Valid labels are given by</span>
+<span class="sd">            :attr:`.SUPPORTED_LABELS`.</span>
+<span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">key</span> <span class="o">=</span> <span class="n">term</span><span class="o">.</span><span class="n">__class__</span><span class="o">.</span><span class="n">__name__</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">terms</span><span class="p">[</span><span class="n">key</span><span class="p">]</span> <span class="o">=</span> <span class="n">term</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">label_term</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">label</span><span class="p">)</span></div>
@@ -172,7 +200,9 @@
 <div class="viewcode-block" id="Equation.select_terms"><a class="viewcode-back" href="../../thetis.html#thetis.equation.Equation.select_terms">[docs]</a>    <span class="k">def</span> <span class="nf">select_terms</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Generator function that selects terms by label(s).</span>
-<span class="sd">        label can be a single label (e.g. &#39;explicit&#39;), &#39;all&#39; or a tuple of labels</span>
+
+<span class="sd">        label can be a single label (e.g. &#39;explicit&#39;), &#39;all&#39; or a tuple of</span>
+<span class="sd">        labels.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">label</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
             <span class="k">if</span> <span class="n">label</span> <span class="o">==</span> <span class="s1">&#39;all&#39;</span><span class="p">:</span>
