deployed documentation updates from website-doc branch

--- a/_modules/thetis/options.html
+++ b/_modules/thetis/options.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.options &#8212; Thetis 0+untagged.820.g6820076 documentation</title>
+    <title>thetis.options &#8212; Thetis 0+untagged.833.g086f878 documentation</title>
     
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0+untagged.820.g6820076',
+        VERSION:     '0+untagged.833.g086f878',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -126,7 +126,7 @@
         <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        str: time integrator option.</span>
 
-<span class="sd">        Valid options for the 2D solver: &#39;forwardeuler&#39;|&#39;backwardeuler&#39;|&#39;ssprk33&#39;|&#39;ssprk33semi&#39;|&#39;cranknicolson&#39;|&#39;sspimex&#39;|&#39;steadystate&#39;</span>
+<span class="sd">        Valid options for the 2D solver: &#39;forwardeuler&#39;|&#39;backwardeuler&#39;|&#39;ssprk33&#39;|&#39;ssprk33semi&#39;|&#39;cranknicolson&#39;|&#39;sspimex&#39;|&#39;pressureprojectionpicard&#39;|&#39;steadystate&#39;</span>
 
 <span class="sd">        Valid options for the 2D solver: &#39;ssprk33&#39;|&#39;erkale&#39;|&#39;leapfrog&#39;|&#39;imexale&#39;|&#39;ssprk22&#39;</span>
 <span class="sd">        &quot;&quot;&quot;</span>
