--- a/_modules/thetis/utility.html
+++ b/_modules/thetis/utility.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>thetis.utility &#8212; Thetis 0+untagged.820.g6820076 documentation</title>
+    <title>thetis.utility &#8212; Thetis 0+untagged.833.g086f878 documentation</title>
     
     <link rel="stylesheet" href="../../_static/thetis.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0+untagged.820.g6820076',
+        VERSION:     '0+untagged.833.g086f878',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -323,7 +323,8 @@
 <span class="sd">    Vertical velocity is obtained from the continuity equation</span>
 
 <span class="sd">    .. math::</span>
-<span class="sd">        \frac{\partial w}{\partial z} = \nabla_h \cdot \textbf{u}</span>
+<span class="sd">        \frac{\partial w}{\partial z} = -\nabla_h \cdot \textbf{u}</span>
+<span class="sd">        :label: continuity_eq_3d</span>
 
 <span class="sd">    and the bottom impermeability condition (:math:`h` denotes the bathymetry)</span>
 
@@ -1286,6 +1287,7 @@
 
 <span class="sd">    .. math ::</span>
 <span class="sd">        \rho = \rho&#39;(T, S, p) + \rho_0</span>
+<span class="sd">        :label: equation_of_state</span>
 
 <span class="sd">    Jackett et al. (2006). Algorithms for Density, Potential Temperature,</span>
 <span class="sd">    Conservative Temperature, and the Freezing Temperature of Seawater.</span>
